tests/badreadingdotplus.out
./badreadingdotplus.svx:3:5: error: Expecting numeric field, found ".hello."
 1 2 .hello. 100 -90
     ^~~~~~~
./badreadingdotplus.svx:4:5: error: Expecting numeric field, found "+hello+"
 2 3 +hello+ 100 -45
     ^~~~~~~
./badreadingdotplus.svx:6:5: error: Expecting numeric field, found "-hello"
 3 4 -hello  100 -22.5
     ^~~~~~
./badreadingdotplus.svx:7:17: error: Expecting numeric field, found ""
 4 5 10.00   100 ;comment
                 ^

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 4 survey stations, joined by 3 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
Vertical range = 0.00m (from 4 at 0.00m to 4 at 0.00m)
North-South range = 0.00m (from 4 at 0.00m to 4 at 0.00m)
East-West range = 0.00m (from 4 at 0.00m to 4 at 0.00m)
   2 1-nodes.
   2 2-nodes.
There were 0 warning(s) and 4 error(s) - no output files produced.
